// Vitest Snapshot v1

exports[`(components) atoms/heading > (blue) take snap shot 1`] = `
<div>
  <h1
    class="css-19bydd8-Heading"
  >
    This is test
  </h1>
</div>
`;

exports[`(components) atoms/heading > (default) take snap shot 1`] = `
<div>
  <h1
    class="css-xjoc4k-Heading"
  >
    This is test
  </h1>
</div>
`;

exports[`(components) atoms/heading > (green) take snap shot 1`] = `
<div>
  <h1
    class="css-6wlfu-Heading"
  >
    This is test
  </h1>
</div>
`;

exports[`(components) atoms/heading > (purple) take snap shot 1`] = `
<div>
  <h1
    class="css-108ruf2-Heading"
  >
    This is test
  </h1>
</div>
`;

exports[`(components) atoms/heading > (red) take snap shot 1`] = `
<div>
  <h1
    class="css-w5s3k0-Heading"
  >
    This is test
  </h1>
</div>
`;
